# sirius-test

./: .gitignore  README.md
bot/: Dockerfile  bot.py  pyproject.toml
server/: Dockerfile  prepare_messages.py  pyproject.toml  server.py
server/model/: config.json
