[tool.poetry]
name = "sirius-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sirius_server"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.103.0"
tensorflow = "^2.13.0"
uvicorn = "^0.23.2"
transformers = "^4.32.1"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
